--- a/TDIN Project/DinningRoom/DinningRoom.csproj
+++ b/TDIN Project/DinningRoom/DinningRoom.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5023CE00-062F-4341-97FF-6868A303F67C}</ProjectGuid>
+    <ProjectGuid>{89253272-4497-4FE1-8AAB-C159FAAF9C49}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Dining_Room</RootNamespace>
-    <AssemblyName>Dining_Room</AssemblyName>
+    <RootNamespace>DinningRoom</RootNamespace>
+    <AssemblyName>DinningRoom</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -54,6 +53,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
