--- a/TDIN Project/App.config
+++ b/TDIN Project/App.config
@@ -3,4 +3,18 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.runtime.remoting>
+      <application name="Server">
+         <service>
+         <!-- A VER -->
+        </service>
+        <channels>
+          <channel ref="tcp" port="9000">
+            <serverProviders>
+              <formatter ref="binary" typeFilterLevel="Full" />
+            </serverProviders>
+          </channel>
+        </channels>
+      </application>
+    </system.runtime.remoting>
 </configuration>
