--- a/TDIN Project/DinningRoom/App.config
+++ b/TDIN Project/DinningRoom/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.runtime.remoting>
+      <application>
+        <client url="tcp://localhost:9000/Server">
+          <wellknown
+             url="tcp://localhost:9000/Server" /> <!-- A VER O URL E O TYPE -->
+        </client>
+        <channels>
+          <channel ref="tcp" port="0">
+            <serverProviders>
+              <formatter ref="binary" typeFilterLevel="Full" />
+            </serverProviders>
+          </channel>
+        </channels>
+      </application>
+    </system.runtime.remoting>
 </configuration>
