Tentativa de ligações...

--- a/TDIN Project/App.config
+++ b/TDIN Project/App.config
@@ -6,8 +6,9 @@
     <system.runtime.remoting>
       <application name="Server">
          <service>
-         <!-- A VER -->
-        </service>
+           <wellknown type="DinningRoom.DinningRoom, DinningRoom" mode="Singleton"
+           objectUri="DinningRoom" />
+         </service>
         <channels>
           <channel ref="tcp" port="9000">
             <serverProviders>
