--- a/TDIN Project/DinningRoom/App.config
+++ b/TDIN Project/DinningRoom/App.config
@@ -5,9 +5,9 @@
     </startup>
     <system.runtime.remoting>
       <application>
-        <client url="tcp://localhost:9000/Server">
-          <wellknown
-             url="tcp://localhost:9000/Server" /> <!-- A VER O URL E O TYPE -->
+        <client>
+          <wellknown type="DinningRoom.DinningRoom, DinningRoom"
+          url="tcp://localhost:9000/Server/DinningRoom" />
         </client>
         <channels>
           <channel ref="tcp" port="0">
