Server a dar :dancer:

--- a/TDIN_Proj/Management/Management.csproj
+++ b/TDIN_Proj/Management/Management.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{24FEFE93-22D6-4C74-A7C5-AF35A0D93FFC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>Management</RootNamespace>
+    <AssemblyName>Management</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
