--- a/TDIN_Proj/DinningRoom/App.config
+++ b/TDIN_Proj/DinningRoom/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <system.runtime.remoting>
     <application>
-      <client>
+      <client url="tcp://localhost:9000/Server">
         <wellknown type="IManagement, Models" url="tcp://localhost:9000/Server/ListServer"/>
       </client>
       <channels>
