--- a/TDIN_Proj/DinningRoom/App.config
+++ b/TDIN_Proj/DinningRoom/App.config
@@ -3,7 +3,7 @@
   <system.runtime.remoting>
     <application>
       <client url="tcp://localhost:9000/Server">
-        <wellknown type="IManagement, Models" url="tcp://localhost:9000/Server/ListServer"/>
+        <wellknown type="Management.Management, IManagement" url="tcp://localhost:9000/Server/ListServer"/>
       </client>
       <channels>
         <channel ref="tcp" port="0">
