--- a/TDIN_Proj/Server/App.config
+++ b/TDIN_Proj/Server/App.config
@@ -3,7 +3,7 @@
   <system.runtime.remoting>
     <application name="Server">
       <service>
-        <wellknown mode="Singleton" type="Management.Management, Models" objectUri="ListServer"/>
+        <wellknown mode="Singleton" type="Management.Management, Management" objectUri="ListServer"/>
       </service>
       <channels>
         <channel ref="tcp" port="9000">
