--- a/TDIN_Proj/KitchenBar/App.config
+++ b/TDIN_Proj/KitchenBar/App.config
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <system.runtime.remoting>
+    <application>
+      <client url="tcp://localhost:9000/Server">
+        <wellknown type="Models.Models, IManagement" url="tcp://localhost:9000/Server/ListServer"/>
+      </client>
+      <channels>
+        <channel ref="tcp" port="1">
+          <serverProviders>
+            <formatter ref="binary" typeFilterLevel="Full"/>
+          </serverProviders>
+        </channel>
+      </channels>
+    </application>
+  </system.runtime.remoting>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
