--- a/TDIN_Proj/KitchenBar/App.config
+++ b/TDIN_Proj/KitchenBar/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <system.runtime.remoting>
     <application>
-      <client url="tcp://localhost:9000/Server">
-        <wellknown type="Models.Models, IManagement" url="tcp://localhost:9000/Server/ListServer"/>
+      <client>
+        <wellknown type="IManagement, Models" url="tcp://localhost:9000/Server/ListServer"/>
       </client>
       <channels>
         <channel ref="tcp" port="1">
