--- a/TDIN_Proj2/.babelrc
+++ b/TDIN_Proj2/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
     "@babel/env",
-    "@babel/preset-typescript",
-	"@babel/preset-react"
+    "@babel/preset-typescript"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
