--- a/TDIN_Proj2/package.json
+++ b/TDIN_Proj2/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:react": "webpack --mode development --config webpack.react.config.js",
     "build": "webpack --mode development",
     "start": "electron ./dist/main.js"
   },
@@ -16,7 +17,10 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
     "babel-loader": "^8.0.5",
     "electron": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -25,5 +29,9 @@
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
