--- a/TDIN_Proj2/package.json
+++ b/TDIN_Proj2/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.8.4",
     "babel-loader": "^8.0.5",
     "electron": "^5.0.1",
+    "electron-cgi": "0.0.2",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
