--- a/TDIN2/WebApp/appsettings.json
+++ b/TDIN2/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TDIN2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source = .\\SQLEXPRESS;Initial Catalog = TDIN2; Integrated Security = True; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
