a store area já vai buscar os livros!

--- a/TDIN2/GUI_Store/GUI_Store.csproj
+++ b/TDIN2/GUI_Store/GUI_Store.csproj
@@ -75,6 +75,7 @@
     <EmbeddedResource Include="OrderCreation.resx">
       <DependentUpon>OrderCreation.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Common.Models.Book.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
