--- a/TDIN2/GUI_Warehouse/GUI_Warehouse.csproj
+++ b/TDIN2/GUI_Warehouse/GUI_Warehouse.csproj
@@ -88,6 +88,12 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
     </PackageReference>
+    <PackageReference Include="PusherClient">
+      <Version>0.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="WebSocket4Net">
+      <Version>0.15.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
